--- a/Assignment-2-16110057-GirishChandarG/Assignment-2-16110057-GirishChandarG-Q1.ipynb
+++ b/Assignment-2-16110057-GirishChandarG/Assignment-2-16110057-GirishChandarG-Q1.ipynb
@@ -428,17 +428,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It can be seen from the perplexities that the as n increase in n-gram the performance is better."
+    "It can be seen from the perplexities that the as n increase in n-gram the performance is better and also the readility and sense of the sentences also increases with n."
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "Reference:\n",
-    "    https://medium.com/@shivambansal36/language-modelling-text-generation-using-lstms-deep-learning-for-nlp-ed36b224b275\n",
-    "Collaborated with Prateek Chennuri(161100)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
